src/compiler/y.output
State 259 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: initial_declaration
    2                 | translation_unit definition_or_statement

    3 initial_declaration: /* empty */
    4                    | require_list rename_list
    5                    | require_list
    6                    | rename_list
    7                    | initial_declaration lib_function

    8 require_list: require_declaration
    9             | require_list require_declaration

   10 require_declaration: REQUIRE package_name CR

   11 package_name: IDENTIFIER
   12             | package_name DOT IDENTIFIER

   13 rename_list: rename_declaration
   14            | rename_list rename_declaration

   15 rename_declaration: RENAME package_name IDENTIFIER CR

   16 definition_or_statement: function_definition
   17                        | class_definition
   18                        | statement
   19                        | delegate_definition
   20                        | enum_definition
   21                        | const_definition

   22 basic_type_specifier: VOID_T
   23                     | BOOLEAN_T
   24                     | INT_T
   25                     | DOUBLE_T
   26                     | STRING_T
   27                     | VARIENT_T
   28                     | FLOAT_T
   29                     | NATIVE_POINTER_T
   30                     | DELEGATE

   31 identifier_type_specifier: IDENTIFIER

   32 array_type_specifier_sub: basic_type_specifier LB RB
   33                         | IDENTIFIER LB RB
   34                         | array_type_specifier LB RB
   35                         | template_type_specifier LB RB

   36 array_type_specifier: array_type_specifier_sub global

   37 template_type_specifier: IDENTIFIER LT type_list GT

   38 type_specifier: basic_type_specifier
   39               | array_type_specifier
   40               | identifier_type_specifier
   41               | template_type_specifier

   42 type_list: type_specifier
   43          | type_list COMMA type_specifier

   44 $@1: /* empty */

   45 lib_function: LIB IDENTIFIER $@1 CR lib_function_declaration_list END

   46 lib_function_declaration_list: /* empty */
   47                              | lib_function_declaration_list function_declaration
   48                              | lib_function_declaration_list class_definition

   49 function_declaration: DECLARE FUNCTION IDENTIFIER LP parameter_list apostrophe RP AS type_specifier throws_clause CR
   50                     | DECLARE FUNCTION IDENTIFIER LP apostrophe RP AS type_specifier throws_clause CR
   51                     | DECLARE BSUB IDENTIFIER LP parameter_list apostrophe RP throws_clause CR
   52                     | DECLARE BSUB IDENTIFIER LP apostrophe RP throws_clause CR

   53 function_definition: FUNCTION IDENTIFIER LP parameter_list apostrophe RP AS type_specifier throws_clause myblock
   54                    | FUNCTION IDENTIFIER LP apostrophe RP AS type_specifier throws_clause myblock
   55                    | BSUB IDENTIFIER LP parameter_list apostrophe RP throws_clause myblock
   56                    | BSUB IDENTIFIER LP apostrophe RP throws_clause myblock
   57                    | function_declaration

   58 parameter_list: IDENTIFIER AS type_specifier
   59               | parameter_list COMMA IDENTIFIER AS type_specifier

   60 argument_list: assignment_expression
   61              | argument_list COMMA assignment_expression

   62 statement_list: statement
   63               | statement_list statement

   64 expression: assignment_expression
   65           | expression COMMA assignment_expression

   66 assignment_expression: logical_or_expression
   67                      | primary_expression assignment_operator assignment_expression

   68 assignment_operator: ASSIGN_T
   69                    | ADD_ASSIGN_T
   70                    | SUB_ASSIGN_T
   71                    | ATM_ADD_ASSIGN_T
   72                    | ATM_SUB_ASSIGN_T
   73                    | MUL_ASSIGN_T
   74                    | DIV_ASSIGN_T
   75                    | MOD_ASSIGN_T

   76 logical_or_expression: logical_and_expression
   77                      | logical_or_expression LOGICAL_OR logical_and_expression

   78 logical_and_expression: equality_expression
   79                       | logical_and_expression LOGICAL_AND equality_expression

   80 equality_expression: relational_expression
   81                    | equality_expression EQ relational_expression
   82                    | equality_expression NE relational_expression

   83 relational_expression: additive_expression
   84                      | relational_expression GT additive_expression
   85                      | relational_expression GE additive_expression
   86                      | relational_expression LT additive_expression
   87                      | relational_expression LE additive_expression

   88 additive_expression: multiplicative_expression
   89                    | additive_expression ADD multiplicative_expression
   90                    | additive_expression SUB multiplicative_expression

   91 multiplicative_expression: unary_expression
   92                          | multiplicative_expression MUL unary_expression
   93                          | multiplicative_expression DIV unary_expression
   94                          | multiplicative_expression MOD unary_expression
   95                          | multiplicative_expression BIT_AND unary_expression
   96                          | multiplicative_expression BIT_OR unary_expression
   97                          | multiplicative_expression BIT_XOR unary_expression

   98 unary_expression: postfix_expression
   99                 | SUB unary_expression
  100                 | EXCLAMATION unary_expression
  101                 | BIT_NOT unary_expression

  102 postfix_expression: primary_expression
  103                   | primary_expression INCREMENT
  104                   | primary_expression DECREMENT
  105                   | primary_expression INSTANCEOF type_specifier

  106 primary_expression: primary_no_new_array
  107                   | array_creation
  108                   | IDENTIFIER
  109                   | AUTOVAR

  110 primary_no_new_array: primary_no_new_array LB expression RB
  111                     | IDENTIFIER LB expression RB
  112                     | IDENTIFIER LB expression COLON expression RB
  113                     | primary_no_new_array LB expression COLON expression RB
  114                     | primary_expression DOT IDENTIFIER
  115                     | primary_expression LP argument_list RP
  116                     | primary_expression LP RP
  117                     | LP expression RP
  118                     | primary_expression DOWN_CAST_BEGIN type_specifier DOWN_CAST_END
  119                     | INT_LITERAL
  120                     | DOUBLE_LITERAL
  121                     | FLOAT_LITERAL
  122                     | STRING_LITERAL
  123                     | REGEXP_LITERAL
  124                     | TRUE_T
  125                     | FALSE_T
  126                     | NULL_T
  127                     | array_literal
  128                     | THIS_T
  129                     | SUPER_T
  130                     | NEW DELEGATE LP RP
  131                     | NEW IDENTIFIER LP RP
  132                     | NEW IDENTIFIER LP argument_list RP
  133                     | NEW IDENTIFIER DOT IDENTIFIER LP RP
  134                     | NEW IDENTIFIER DOT IDENTIFIER LP argument_list RP

  135 array_literal: LC expression_list RC
  136              | LC expression_list COMMA RC

  137 array_creation: NEW basic_type_specifier dimension_expression_list global
  138               | NEW basic_type_specifier dimension_expression_list dimension_list global
  139               | NEW identifier_type_specifier dimension_expression_list global
  140               | NEW identifier_type_specifier dimension_expression_list dimension_list global
  141               | NEW template_type_specifier dimension_expression_list global
  142               | NEW template_type_specifier dimension_expression_list dimension_list global

  143 dimension_expression_list: dimension_expression
  144                          | dimension_expression_list dimension_expression

  145 dimension_expression: LB expression RB

  146 dimension_list: LB RB
  147               | dimension_list LB RB

  148 expression_list: /* empty */
  149                | assignment_expression
  150                | expression_list COMMA assignment_expression

  151 statement: expression CR
  152          | if_statement
  153          | switch_statement
  154          | while_statement
  155          | for_statement
  156          | do_while_statement
  157          | foreach_statement
  158          | return_statement
  159          | break_statement
  160          | continue_statement
  161          | try_statement
  162          | throw_statement
  163          | declaration_statement
  164          | CR

  165 if_statement: IF expression THEN myblock
  166             | IF expression THEN myblock ELSE myblock
  167             | IF expression THEN myblock elsif_list
  168             | IF expression THEN myblock elsif_list ELSE myblock

  169 elsif_list: elsif
  170           | elsif_list elsif

  171 elsif: ELSIF expression THEN myblock

  172 label_opt: /* empty */
  173          | IDENTIFIER COLON

  174 switch_statement: SWITCH expression CR case_list default_opt

  175 case_list: one_case
  176          | case_list one_case

  177 one_case: CASE case_expression_list myblock

  178 default_opt: /* empty */
  179            | DEFAULT_T myblock

  180 case_expression_list: assignment_expression
  181                     | expression_list COMMA assignment_expression

  182 while_statement: label_opt WHILE expression myblock

  183 for_statement: label_opt FOR expression_opt SEMICOLON expression_opt SEMICOLON expression_opt myblock

  184 do_while_statement: label_opt DO_T block WHILE LP expression RP CR

  185 foreach_statement: label_opt FOREACH LP IDENTIFIER COLON expression RP block

  186 expression_opt: /* empty */
  187               | expression

  188 return_statement: RETURN_T expression_opt CR

  189 identifier_opt: /* empty */
  190               | IDENTIFIER

  191 break_statement: BREAK identifier_opt CR

  192 continue_statement: CONTINUE identifier_opt CR

  193 try_statement: TRY myblock catch_list FINALLY myblock
  194              | TRY myblock FINALLY block
  195              | TRY myblock catch_list

  196 catch_list: catch_clause
  197           | catch_list catch_clause

  198 @2: /* empty */

  199 catch_clause: CATCH @2 type_specifier IDENTIFIER myblock

  200 throw_statement: THROW expression CR
  201                | THROW CR

  202 declaration_statement: DIM volatile IDENTIFIER AS shared type_specifier CR
  203                      | DIM volatile IDENTIFIER AS shared type_specifier ASSIGN_T expression CR
  204                      | FINAL IDENTIFIER AS type_specifier CR
  205                      | FINAL IDENTIFIER AS type_specifier ASSIGN_T expression CR

  206 @3: /* empty */

  207 block: LC @3 statement_list RC
  208      | LC RC

  209 template_def_list: IDENTIFIER
  210                  | template_def_list COMMA IDENTIFIER
  211                  | IDENTIFIER COLON identifier_type_specifier
  212                  | template_def_list COMMA IDENTIFIER COLON identifier_type_specifier

  213 template_list: LT template_def_list GT
  214              | /* empty */

  215 $@4: /* empty */

  216 class_definition: shared class_or_interface IDENTIFIER template_list extends CR $@4 member_declaration_list END

  217 $@5: /* empty */

  218 class_definition: shared class_or_member_modifier_list class_or_interface IDENTIFIER template_list extends CR $@5 member_declaration_list END

  219 $@6: /* empty */

  220 class_definition: shared class_or_interface IDENTIFIER template_list extends CR $@6 END

  221 $@7: /* empty */

  222 class_definition: shared class_or_member_modifier_list class_or_interface IDENTIFIER template_list extends CR $@7 END

  223 class_or_member_modifier_list: class_or_member_modifier
  224                              | class_or_member_modifier_list class_or_member_modifier

  225 class_or_member_modifier: access_modifier
  226                         | VIRTUAL_T
  227                         | OVERRIDE_T
  228                         | ABSTRACT_T

  229 class_or_interface: CLASS_T
  230                   | INTERFACE_T

  231 extends: /* empty */
  232        | COLON extends_list

  233 extends_list: IDENTIFIER
  234             | extends_list COMMA IDENTIFIER

  235 member_declaration_list: member_declaration
  236                        | member_declaration_list member_declaration

  237 member_declaration: method_member
  238                   | field_member

  239 method_member: method_function_definition
  240              | class_or_member_modifier_list method_function_definition
  241              | constructor_definition
  242              | class_or_member_modifier_list constructor_definition

  243 method_function_definition: FUNCTION IDENTIFIER LP parameter_list RP AS type_specifier throws_clause myblock
  244                           | FUNCTION IDENTIFIER LP RP AS type_specifier throws_clause myblock
  245                           | DECLARE FUNCTION IDENTIFIER LP parameter_list RP AS type_specifier throws_clause CR
  246                           | DECLARE FUNCTION IDENTIFIER LP RP AS type_specifier throws_clause CR
  247                           | BSUB IDENTIFIER LP parameter_list RP throws_clause myblock
  248                           | BSUB IDENTIFIER LP RP throws_clause myblock
  249                           | DECLARE BSUB IDENTIFIER LP parameter_list RP throws_clause CR
  250                           | DECLARE BSUB IDENTIFIER LP RP throws_clause CR

  251 apostrophe: /* empty */
  252           | COMMA APOSTROPHE

  253 throws_clause: /* empty */
  254              | THROWS exception_list

  255 exception_list: IDENTIFIER
  256               | exception_list COMMA IDENTIFIER

  257 constructor_definition: CONSTRUCTOR IDENTIFIER LP parameter_list RP throws_clause myblock
  258                       | CONSTRUCTOR IDENTIFIER LP RP throws_clause myblock
  259                       | DECLARE CONSTRUCTOR IDENTIFIER LP parameter_list RP throws_clause CR
  260                       | DECLARE CONSTRUCTOR IDENTIFIER LP RP throws_clause CR

  261 access_modifier: PUBLIC_T
  262                | PRIVATE_T

  263 initializer_opt: /* empty */
  264                | ASSIGN_T expression

  265 field_member: DIM IDENTIFIER AS type_specifier initializer_opt CR
  266             | class_or_member_modifier_list IDENTIFIER AS type_specifier initializer_opt CR
  267             | FINAL IDENTIFIER AS type_specifier initializer_opt CR
  268             | class_or_member_modifier_list FINAL IDENTIFIER AS type_specifier initializer_opt CR
  269             | FINAL class_or_member_modifier_list IDENTIFIER AS type_specifier initializer_opt CR

  270 delegate_definition: DELEGATE IDENTIFIER LP parameter_list apostrophe RP AS type_specifier throws_clause CR
  271                    | DELEGATE IDENTIFIER LP apostrophe RP AS type_specifier throws_clause CR

  272 enum_definition: ENUM IDENTIFIER LC enumerator_list RC
  273                | ENUM IDENTIFIER LC enumerator_list COMMA RC

  274 enumerator_list: IDENTIFIER
  275                | enumerator_list COMMA IDENTIFIER

  276 const_definition: CONST IDENTIFIER ASSIGN_T expression CR
  277                 | CONST type_specifier IDENTIFIER CR

  278 shared: /* empty */
  279       | SHARED

  280 volatile: /* empty */
  281         | VOLATILE

  282 global: /* empty */
  283       | GLOBAL

  284 unsafe: /* empty */
  285       | UNSAFE CR
  286       | SAFE CR

  287 @8: /* empty */

  288 myblock: CR unsafe @8 statement_list END
  289        | CR END


Terminals, with rules where they appear

$end (0) 0
error (256)
INT_LITERAL (258) 119
DOUBLE_LITERAL (259) 120
FLOAT_LITERAL (260) 121
STRING_LITERAL (261) 122
REGEXP_LITERAL (262) 123
IDENTIFIER (263) 11 12 15 31 33 37 45 49 50 51 52 53 54 55 56 58 59
    108 111 112 114 131 132 133 134 173 185 190 199 202 203 204 205
    209 210 211 212 216 218 220 222 233 234 243 244 245 246 247 248
    249 250 255 256 257 258 259 260 265 266 267 268 269 270 271 272
    273 274 275 276 277
AUTOVAR (264) 109
IF (265) 165 166 167 168
ELSE (266) 166 168
ELSIF (267) 171
SWITCH (268) 174
CASE (269) 177
DEFAULT_T (270) 179
WHILE (271) 182 184
DO_T (272) 184
FOR (273) 183
FOREACH (274) 185
RETURN_T (275) 188
BREAK (276) 191
CONTINUE (277) 192
NULL_T (278) 126
LP (279) 49 50 51 52 53 54 55 56 115 116 117 130 131 132 133 134 184
    185 243 244 245 246 247 248 249 250 257 258 259 260 270 271
RP (280) 49 50 51 52 53 54 55 56 115 116 117 130 131 132 133 134 184
    185 243 244 245 246 247 248 249 250 257 258 259 260 270 271
LC (281) 135 136 207 208 272 273
RC (282) 135 136 207 208 272 273
LB (283) 32 33 34 35 110 111 112 113 145 146 147
RB (284) 32 33 34 35 110 111 112 113 145 146 147
SEMICOLON (285) 183
COLON (286) 112 113 173 185 211 212 232
COMMA (287) 43 59 61 65 136 150 181 210 212 234 252 256 273 275
ASSIGN_T (288) 68 203 205 264 276
LOGICAL_AND (289) 79
LOGICAL_OR (290) 77
EQ (291) 81
NE (292) 82
GT (293) 37 84 213
GE (294) 85
LT (295) 37 86 213
LE (296) 87
ADD (297) 89
SUB (298) 90 99
MUL (299) 92
DIV (300) 93
MOD (301) 94
BIT_AND (302) 95
BIT_OR (303) 96
BIT_XOR (304) 97
BIT_NOT (305) 101
TRUE_T (306) 124
FALSE_T (307) 125
EXCLAMATION (308) 100
DOT (309) 12 114 133 134
ADD_ASSIGN_T (310) 69
SUB_ASSIGN_T (311) 70
MUL_ASSIGN_T (312) 73
DIV_ASSIGN_T (313) 74
MOD_ASSIGN_T (314) 75
INCREMENT (315) 103
DECREMENT (316) 104
TRY (317) 193 194 195
CATCH (318) 199
FINALLY (319) 193 194
THROW (320) 200 201
THROWS (321) 254
VOID_T (322) 22
BOOLEAN_T (323) 23
INT_T (324) 24
DOUBLE_T (325) 25
STRING_T (326) 26
VARIENT_T (327) 27
FLOAT_T (328) 28
NATIVE_POINTER_T (329) 29
NEW (330) 130 131 132 133 134 137 138 139 140 141 142
REQUIRE (331) 10
RENAME (332) 15
CLASS_T (333) 229
INTERFACE_T (334) 230
PUBLIC_T (335) 261
PRIVATE_T (336) 262
VIRTUAL_T (337) 226
OVERRIDE_T (338) 227
ABSTRACT_T (339) 228
THIS_T (340) 128
SUPER_T (341) 129
CONSTRUCTOR (342) 257 258 259 260
INSTANCEOF (343) 105
DOWN_CAST_BEGIN (344) 118
DOWN_CAST_END (345) 118
DELEGATE (346) 30 130 270 271
FINAL (347) 204 205 267 268 269
ENUM (348) 272 273
CONST (349) 276 277
FUNCTION (350) 49 50 53 54 243 244 245 246
AS (351) 49 50 53 54 58 59 202 203 204 205 243 244 245 246 265 266
    267 268 269 270 271
THEN (352) 165 166 167 168 171
DIM (353) 202 203 265
END (354) 45 216 218 220 222 288 289
CR (355) 10 15 45 49 50 51 52 151 164 174 184 188 191 192 200 201 202
    203 204 205 216 218 220 222 245 246 249 250 259 260 265 266 267
    268 269 270 271 276 277 285 286 288 289
DECLARE (356) 49 50 51 52 245 246 249 250 259 260
BSUB (357) 51 52 55 56 247 248 249 250
APOSTROPHE (358) 252
LIB (359) 45
UNSAFE (360) 285
SAFE (361) 286
SHARED (362) 279
GLOBAL (363) 283
VOLATILE (364) 281
ATM_ADD_ASSIGN_T (365) 71
ATM_SUB_ASSIGN_T (366) 72


Nonterminals, with rules where they appear

$accept (112)
    on left: 0
translation_unit (113)
    on left: 1 2, on right: 0 2
initial_declaration (114)
    on left: 3 4 5 6 7, on right: 1 7
require_list (115)
    on left: 8 9, on right: 4 5 9
require_declaration (116)
    on left: 10, on right: 8 9
package_name (117)
    on left: 11 12, on right: 10 12 15
rename_list (118)
    on left: 13 14, on right: 4 6 14
rename_declaration (119)
    on left: 15, on right: 13 14
definition_or_statement (120)
    on left: 16 17 18 19 20 21, on right: 2
basic_type_specifier (121)
    on left: 22 23 24 25 26 27 28 29 30, on right: 32 38 137 138
identifier_type_specifier (122)
    on left: 31, on right: 40 139 140 211 212
array_type_specifier_sub (123)
    on left: 32 33 34 35, on right: 36
array_type_specifier (124)
    on left: 36, on right: 34 39
template_type_specifier (125)
    on left: 37, on right: 35 41 141 142
type_specifier (126)
    on left: 38 39 40 41, on right: 42 43 49 50 53 54 58 59 105 118
    199 202 203 204 205 243 244 245 246 265 266 267 268 269 270 271
    277
type_list (127)
    on left: 42 43, on right: 37 43
lib_function (128)
    on left: 45, on right: 7
$@1 (129)
    on left: 44, on right: 45
lib_function_declaration_list (130)
    on left: 46 47 48, on right: 45 47 48
function_declaration (131)
    on left: 49 50 51 52, on right: 47 57
function_definition (132)
    on left: 53 54 55 56 57, on right: 16
parameter_list (133)
    on left: 58 59, on right: 49 51 53 55 59 243 245 247 249 257 259
    270
argument_list (134)
    on left: 60 61, on right: 61 115 132 134
statement_list (135)
    on left: 62 63, on right: 63 207 288
expression (136)
    on left: 64 65, on right: 65 110 111 112 113 117 145 151 165 166
    167 168 171 174 182 184 185 187 200 203 205 264 276
assignment_expression (137)
    on left: 66 67, on right: 60 61 64 65 67 149 150 180 181
assignment_operator (138)
    on left: 68 69 70 71 72 73 74 75, on right: 67
logical_or_expression (139)
    on left: 76 77, on right: 66 77
logical_and_expression (140)
    on left: 78 79, on right: 76 77 79
equality_expression (141)
    on left: 80 81 82, on right: 78 79 81 82
relational_expression (142)
    on left: 83 84 85 86 87, on right: 80 81 82 84 85 86 87
additive_expression (143)
    on left: 88 89 90, on right: 83 84 85 86 87 89 90
multiplicative_expression (144)
    on left: 91 92 93 94 95 96 97, on right: 88 89 90 92 93 94 95 96
    97
unary_expression (145)
    on left: 98 99 100 101, on right: 91 92 93 94 95 96 97 99 100 101
postfix_expression (146)
    on left: 102 103 104 105, on right: 98
primary_expression (147)
    on left: 106 107 108 109, on right: 67 102 103 104 105 114 115
    116 118
primary_no_new_array (148)
    on left: 110 111 112 113 114 115 116 117 118 119 120 121 122 123
    124 125 126 127 128 129 130 131 132 133 134, on right: 106 110
    113
array_literal (149)
    on left: 135 136, on right: 127
array_creation (150)
    on left: 137 138 139 140 141 142, on right: 107
dimension_expression_list (151)
    on left: 143 144, on right: 137 138 139 140 141 142 144
dimension_expression (152)
    on left: 145, on right: 143 144
dimension_list (153)
    on left: 146 147, on right: 138 140 142 147
expression_list (154)
    on left: 148 149 150, on right: 135 136 150 181
statement (155)
    on left: 151 152 153 154 155 156 157 158 159 160 161 162 163 164,
    on right: 18 62 63
if_statement (156)
    on left: 165 166 167 168, on right: 152
elsif_list (157)
    on left: 169 170, on right: 167 168 170
elsif (158)
    on left: 171, on right: 169 170
label_opt (159)
    on left: 172 173, on right: 182 183 184 185
switch_statement (160)
    on left: 174, on right: 153
case_list (161)
    on left: 175 176, on right: 174 176
one_case (162)
    on left: 177, on right: 175 176
default_opt (163)
    on left: 178 179, on right: 174
case_expression_list (164)
    on left: 180 181, on right: 177
while_statement (165)
    on left: 182, on right: 154
for_statement (166)
    on left: 183, on right: 155
do_while_statement (167)
    on left: 184, on right: 156
foreach_statement (168)
    on left: 185, on right: 157
expression_opt (169)
    on left: 186 187, on right: 183 188
return_statement (170)
    on left: 188, on right: 158
identifier_opt (171)
    on left: 189 190, on right: 191 192
break_statement (172)
    on left: 191, on right: 159
continue_statement (173)
    on left: 192, on right: 160
try_statement (174)
    on left: 193 194 195, on right: 161
catch_list (175)
    on left: 196 197, on right: 193 195 197
catch_clause (176)
    on left: 199, on right: 196 197
@2 (177)
    on left: 198, on right: 199
throw_statement (178)
    on left: 200 201, on right: 162
declaration_statement (179)
    on left: 202 203 204 205, on right: 163
block (180)
    on left: 207 208, on right: 184 185 194
@3 (181)
    on left: 206, on right: 207
template_def_list (182)
    on left: 209 210 211 212, on right: 210 212 213
template_list (183)
    on left: 213 214, on right: 216 218 220 222
class_definition (184)
    on left: 216 218 220 222, on right: 17 48
$@4 (185)
    on left: 215, on right: 216
$@5 (186)
    on left: 217, on right: 218
$@6 (187)
    on left: 219, on right: 220
$@7 (188)
    on left: 221, on right: 222
class_or_member_modifier_list (189)
    on left: 223 224, on right: 218 222 224 240 242 266 268 269
class_or_member_modifier (190)
    on left: 225 226 227 228, on right: 223 224
class_or_interface (191)
    on left: 229 230, on right: 216 218 220 222
extends (192)
    on left: 231 232, on right: 216 218 220 222
extends_list (193)
    on left: 233 234, on right: 232 234
member_declaration_list (194)
    on left: 235 236, on right: 216 218 236
member_declaration (195)
    on left: 237 238, on right: 235 236
method_member (196)
    on left: 239 240 241 242, on right: 237
method_function_definition (197)
    on left: 243 244 245 246 247 248 249 250, on right: 239 240
apostrophe (198)
    on left: 251 252, on right: 49 50 51 52 53 54 55 56 270 271
throws_clause (199)
    on left: 253 254, on right: 49 50 51 52 53 54 55 56 243 244 245
    246 247 248 249 250 257 258 259 260 270 271
exception_list (200)
    on left: 255 256, on right: 254 256
constructor_definition (201)
    on left: 257 258 259 260, on right: 241 242
access_modifier (202)
    on left: 261 262, on right: 225
initializer_opt (203)
    on left: 263 264, on right: 265 266 267 268 269
field_member (204)
    on left: 265 266 267 268 269, on right: 238
delegate_definition (205)
    on left: 270 271, on right: 19
enum_definition (206)
    on left: 272 273, on right: 20
enumerator_list (207)
    on left: 274 275, on right: 272 273 275
const_definition (208)
    on left: 276 277, on right: 21
shared (209)
    on left: 278 279, on right: 202 203 216 218 220 222
volatile (210)
    on left: 280 281, on right: 202 203
global (211)
    on left: 282 283, on right: 36 137 138 139 140 141 142
unsafe (212)
    on left: 284 285 286, on right: 288
myblock (213)
    on left: 288 289, on right: 53 54 55 56 165 166 167 168 171 177
    179 182 183 193 194 195 199 243 244 247 248 257 258
@8 (214)
    on left: 287, on right: 288


state 0

    0 $accept: . translation_unit $end

    REQUIRE  shift, and go to state 1
    RENAME   shift, and go to state 2

    $default  reduce using rule 3 (initial_declaration)

    translation_unit     go to state 3
    initial_declaration  go to state 4
    require_list         go to state 5
    require_declaration  go to state 6
    rename_list          go to state 7
    rename_declaration   go to state 8


state 1

   10 require_declaration: REQUIRE . package_name CR

    IDENTIFIER  shift, and go to state 9

    package_name  go to state 10


state 2

   15 rename_declaration: RENAME . package_name IDENTIFIER CR

    IDENTIFIER  shift, and go to state 9

    package_name  go to state 11


state 3

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . definition_or_statement

    $end            shift, and go to state 12
    INT_LITERAL     shift, and go to state 13
    DOUBLE_LITERAL  shift, and go to state 14
    FLOAT_LITERAL   shift, and go to state 15
    STRING_LITERAL  shift, and go to state 16
    REGEXP_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 18
    AUTOVAR         shift, and go to state 19
    IF              shift, and go to state 20
    SWITCH          shift, and go to state 21
    RETURN_T        shift, and go to state 22
    BREAK           shift, and go to state 23
    CONTINUE        shift, and go to state 24
    NULL_T          shift, and go to state 25
    LP              shift, and go to state 26
    LC              shift, and go to state 27
    SUB             shift, and go to state 28
    BIT_NOT         shift, and go to state 29
    TRUE_T          shift, and go to state 30
    FALSE_T         shift, and go to state 31
    EXCLAMATION     shift, and go to state 32
    TRY             shift, and go to state 33
    THROW           shift, and go to state 34
    NEW             shift, and go to state 35
    THIS_T          shift, and go to state 36
    SUPER_T         shift, and go to state 37
    DELEGATE        shift, and go to state 38
    FINAL           shift, and go to state 39
    ENUM            shift, and go to state 40
    CONST           shift, and go to state 41
    FUNCTION        shift, and go to state 42
    DIM             shift, and go to state 43
    CR              shift, and go to state 44
    DECLARE         shift, and go to state 45
    BSUB            shift, and go to state 46
    SHARED          shift, and go to state 47

    WHILE     reduce using rule 172 (label_opt)
    DO_T      reduce using rule 172 (label_opt)
    FOR       reduce using rule 172 (label_opt)
    FOREACH   reduce using rule 172 (label_opt)
    $default  reduce using rule 278 (shared)

    definition_or_statement    go to state 48
    function_declaration       go to state 49
    function_definition        go to state 50
    expression                 go to state 51
    assignment_expression      go to state 52
    logical_or_expression      go to state 53
    logical_and_expression     go to state 54
    equality_expression        go to state 55
    relational_expression      go to state 56
    additive_expression        go to state 57
    multiplicative_expression  go to state 58
    unary_expression           go to state 59
    postfix_expression         go to state 60
    primary_expression         go to state 61
    primary_no_new_array       go to state 62
    array_literal              go to state 63
    array_creation             go to state 64
    statement                  go to state 65
    if_statement               go to state 66
    label_opt                  go to state 67
    switch_statement           go to state 68
    while_statement            go to state 69
    for_statement              go to state 70
    do_while_statement         go to state 71
    foreach_statement          go to state 72
    return_statement           go to state 73
    break_statement            go to state 74
    continue_statement         go to state 75
    try_statement              go to state 76
    throw_statement            go to state 77
    declaration_statement      go to state 78
    class_definition           go to state 79
    delegate_definition        go to state 80
    enum_definition            go to state 81
    const_definition           go to state 82
    shared                     go to state 83


state 4

    1 translation_unit: initial_declaration .
    7 initial_declaration: initial_declaration . lib_function

    LIB  shift, and go to state 84

    $default  reduce using rule 1 (translation_unit)

    lib_function  go to state 85


state 5

    4 initial_declaration: require_list . rename_list
    5                    | require_list .
    9 require_list: require_list . require_declaration

    REQUIRE  shift, and go to state 1
    RENAME   shift, and go to state 2

    $default  reduce using rule 5 (initial_declaration)

    require_declaration  go to state 86
    rename_list          go to state 87
    rename_declaration   go to state 8


state 6

    8 require_list: require_declaration .

    $default  reduce using rule 8 (require_list)


state 7

    6 initial_declaration: rename_list .
   14 rename_list: rename_list . rename_declaration

    RENAME  shift, and go to state 2

    $default  reduce using rule 6 (initial_declaration)

    rename_declaration  go to state 88


state 8

   13 rename_list: rename_declaration .

    $default  reduce using rule 13 (rename_list)


state 9

   11 package_name: IDENTIFIER .

    $default  reduce using rule 11 (package_name)


state 10

   10 require_declaration: REQUIRE package_name . CR
   12 package_name: package_name . DOT IDENTIFIER

    DOT  shift, and go to state 89
    CR   shift, and go to state 90


state 11

   12 package_name: package_name . DOT IDENTIFIER
   15 rename_declaration: RENAME package_name . IDENTIFIER CR

    IDENTIFIER  shift, and go to state 91
    DOT         shift, and go to state 89


state 12

    0 $accept: translation_unit $end .

    $default  accept


state 13

  119 primary_no_new_array: INT_LITERAL .

    $default  reduce using rule 119 (primary_no_new_array)


state 14

  120 primary_no_new_array: DOUBLE_LITERAL .

    $default  reduce using rule 120 (primary_no_new_array)


state 15

  121 primary_no_new_array: FLOAT_LITERAL .

    $default  reduce using rule 121 (primary_no_new_array)


state 16

  122 primary_no_new_array: STRING_LITERAL .

    $default  reduce using rule 122 (primary_no_new_array)


state 17

  123 primary_no_new_array: REGEXP_LITERAL .

    $default  reduce using rule 123 (primary_no_new_array)


state 18

  108 primary_expression: IDENTIFIER .
  111 primary_no_new_array: IDENTIFIER . LB expression RB
  112                     | IDENTIFIER . LB expression COLON expression RB
  173 label_opt: IDENTIFIER . COLON

    LB     shift, and go to state 92
    COLON  shift, and go to state 93

    $default  reduce using rule 108 (primary_expression)


state 19

  109 primary_expression: AUTOVAR .

    $default  reduce using rule 109 (primary_expression)


state 20

  165 if_statement: IF . expression THEN myblock
  166             | IF . expression THEN myblock ELSE myblock
  167             | IF . expression THEN myblock elsif_list
  168             | IF . expression THEN myblock elsif_list ELSE myblock

    INT_LITERAL     shift, and go to state 13
    DOUBLE_LITERAL  shift, and go to state 14
    FLOAT_LITERAL   shift, and go to state 15
    STRING_LITERAL  shift, and go to state 16
    REGEXP_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 94
    AUTOVAR         shift, and go to state 19
    NULL_T          shift, and go to state 25
    LP              shift, and go to state 26
    LC              shift, and go to state 27
    SUB             shift, and go to state 28
    BIT_NOT         shift, and go to state 29
    TRUE_T          shift, and go to state 30
    FALSE_T         shift, and go to state 31
    EXCLAMATION     shift, and go to state 32
    NEW             shift, and go to state 35
    THIS_T          shift, and go to state 36
    SUPER_T         shift, and go to state 37

    expression                 go to state 95
    assignment_expression      go to state 52
    logical_or_expression      go to state 53
    logical_and_expression     go to state 54
    equality_expression        go to state 55
    relational_expression      go to state 56
    additive_expression        go to state 57
    multiplicative_expression  go to state 58
    unary_expression           go to state 59
    postfix_expression         go to state 60
    primary_expression         go to state 61
    primary_no_new_array       go to state 62
    array_literal              go to state 63
    array_creation             go to state 64


state 21

  174 switch_statement: SWITCH . expression CR case_list default_opt

    INT_LITERAL     shift, and go to state 13
    DOUBLE_LITERAL  shift, and go to state 14
    FLOAT_LITERAL   shift, and go to state 15
    STRING_LITERAL  shift, and go to state 16
    REGEXP_LITERAL  shift, and go to state 17
    IDENTIFIER      shift, and go to state 94
    AUTOVAR         shift, and go to state 19
    NULL_T          shift, and go to state 25
    LP              shift, and go to state 26
    LC              shift, and go to state 27
    SUB             shift, and go to state 28
    BIT_NOT         shift, and go to state 29
    TRUE_T          shift, and go to state 30
    FALSE_T         shift, and go to state 31
    EXCLAMATION     shift, and go to state 32
    NEW             shift, and go to state 35
    THIS_T          shift, and go to state 36
    SUPER_T         shift, and go to state 37

    expression                 go to state 96
    assignment_expression      go to state 52
    logical_or_expression      go to state 53
    logical_and_expression     go to state 54
    equality_expression        go to state 55
    relational_expression      go to state 56
    additive_expression        go to state 57
    multiplicative_expression  go to state 58
    unary_expression           go to state 59
    postfix_expression         go to state 60
    primary_expression         go to state 61
    primary_no_new_array       go to state 62
    array_literal              go to state 63
    array_creation             go to state 64


state 22

  188 return_statement: RETURN_T . expression_opt CR
